# kami-hash-compute

./: Cargo.toml  README.md  tool.toml
src/: lib.rs
